<resources>
    <string name="app_name">PFAGO</string>
    <string name="add_control_activity_name">Add Control</string>
    <string name="rib_activity_name">RIB</string>
    <string name="hello_blank_fragment">Fordon</string>
    <string name="kg">Kg</string>
    <string name="liter">Liter</string>
    <string name="eq">EQ</string>
    <string name="lq">LQ</string>
    <string name="empty_not_cleaned">Empty not clean</string>
    <string name="trailer">Trailer</string>
    <string name="semi_trailer">Semi trailer</string>
    <string name="container">Container</string>
    <string name="truck">Truck</string>
    <string name="cargo_terminal">Cargo terminal</string>
    <string name="company_visit">Company visit</string>
    <string name="road">Road</string>
    <string name="port_terminal">Port terminal</string>
    <string name="system">System/theme</string>
    <string name="tank">Tank</string>
    <string name="bulk">Bulk</string>
    <string name="mixed_cargo">Mixed cargo</string>
    <string name="other">Other</string>
    <string name="adr">ADR</string>
    <string name="ribWelcome">Sök bland 5 000 ämnen som finns i RIB</string>
    <string name="adrs">ADR-S</string>
    <string name="imdg">IMDG-code</string>
    <string name="icao">ICAO-TI/ATA-DGR</string>
    <string name="rid">RID</string>
    <string name="rids">RID-S</string>
    <string name="mou">MoU</string>
    <string name="controlled">Kontrollerat</string>
    <string name="breaking_the_law">Ej enligt regler</string>
    <string name="not_applicable">Ej tillämpligt</string>
    <string name="loading_plane">Lastplan</string>
    <string name="stowing_certificate">Stuvnings-intyg/CPC</string>
    <string name="bilateral">Bilateral</string>
    <string name="multilateral">Multilateral</string>
    <string name="natninal_approval">Nationellt tillstånd</string>
    <string name="category1">Kategori I</string>
    <string name="category2">Kategori II</string>
    <string name="category3">Kategori III</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="unknown">Vet ej</string>
    <string name="passenger">Annan besättningsmedlem</string>
    <string name="receiver">Mottagare</string>
    <string name="driver">Förare</string>
    <string name="carrier">Transportör</string>
    <string name="sender">Avsändare</string>
    <string name="of">OF-Koder</string>
    <string name="title_activity_r_i_b_substance">RIBSubstanceActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
