<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="Mängd"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalAmountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="Total mängd farligt gods per transportenhet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="12345"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView" />

        <RadioGroup
            android:id="@+id/amountRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText">

            <RadioButton
                android:id="@+id/kgRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/kg" />

            <RadioButton
                android:id="@+id/literRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/liter" />
        </RadioGroup>

        <TextView
            android:id="@+id/packagingStandardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Förpackningsstandard"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <RadioGroup
            android:id="@+id/packagingStandardRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/packagingStandardTextView"
            app:layout_constraintTop_toBottomOf="@+id/packagingStandardTextView">

            <RadioButton
                android:id="@+id/LQRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lq" />

            <RadioButton
                android:id="@+id/EQRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/eq" />

            <RadioButton
                android:id="@+id/emptyNotCleandRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/empty_not_cleaned" />
        </RadioGroup>

        <TextView
            android:id="@+id/valueQuantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Värdeberäknad mängd enligt 1.1.3.6 överskriden"
            app:layout_constraintStart_toStartOf="@+id/packagingStandardRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/packagingStandardRadioGroup" />

        <RadioGroup
            android:id="@+id/valueQuantityRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/valueQuantityTextView"
            app:layout_constraintTop_toBottomOf="@+id/valueQuantityTextView">

            <RadioButton
                android:id="@+id/valueQuantityTrueRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ja" />

            <RadioButton
                android:id="@+id/valueQuantityFalseRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Nej" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Riskvärde"
                android:inputType="phone" />

        </RadioGroup>

        <TextView
            android:id="@+id/transportTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Transport"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/valueQuantityRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/valueQuantityRadioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/transportTextView"
            app:layout_constraintTop_toBottomOf="@+id/transportedWithRadioButton">

            <RadioButton
                android:id="@+id/tankRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tank" />

            <RadioButton
                android:id="@+id/bulkRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bulk" />

            <RadioButton
                android:id="@+id/mixedCargoRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mixed_cargo" />

            <RadioButton
                android:id="@+id/otherRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

        <TextView
            android:id="@+id/transportedWithRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Tranport med"
            app:layout_constraintStart_toStartOf="@+id/transportTextView"
            app:layout_constraintTop_toBottomOf="@+id/transportTextView" />

        <TextView
            android:id="@+id/transportedAccordingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Transport enligt"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/transportedAccordingRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/transportedAccordingTextView"
            app:layout_constraintTop_toBottomOf="@+id/transportedAccordingTextView" >

            <RadioButton
                android:id="@+id/adrRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adr" />

            <RadioButton
                android:id="@+id/adrsRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adrs" />

            <RadioButton
                android:id="@+id/imdgRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imdg" />

            <RadioButton
                android:id="@+id/icoaRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/icao" />

            <RadioButton
                android:id="@+id/ridRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rid" />

            <RadioButton
                android:id="@+id/ridsRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rids" />

            <RadioButton
                android:id="@+id/baltikSeaRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Östersjöavtalet" />

            <RadioButton
                android:id="@+id/otherRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
